# thingdb

./: .gitignore  CF.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STRATEGIES.md  DEPLOYMENT_SUMMARY.md  DEVELOPER.md  DOCKER-STORAGE-QUICK-REF.md  DOCKER_STORAGE_TESTING.md  GETTING_STARTED.html  GETTING_STARTED.md  IDEMPOTENCE_TEST_RESULTS.md  INSTALL.md  INSTALL_README.md  LICENSE  NETWORK-DEPLOYMENT.md  PI-DEPLOYMENT-STRATEGY.md  PI-SERIAL-REAME.md  PI-SERIAL.md  PRINTING_GUIDE.md  PROJECT_STRUCTURE.md  PYBRIDGE-README.md  README.md  SOURCE_CODE_ARCHITECTURE.md  TODO.md  TUNNEL_TOKEN.md  UIX.md  UIX2.md  UIX3.md  USER_GUIDE.md  bootstrap.sh  correct-inventory.service  correct-requirements.txt  create-pi-image.sh  deploy-prepare.sh  fix-ssh-keys.sh  fix-sudo.sh  install  install.sh  install_system_deps.sh  (+9 more)
cloudflare/: INTEGRATION_PLAN.md  QUICK_START.md  README.md  check_access_apps.py  check_access_logs.py  check_access_policies.py  check_tunnel_config.py  check_tunnel_status.py  cleanup_tunnels.py  delete_identity_provider.py  fix_access_policy.py  flask_integration.py  remote_access.html  setup.sh  test_api.py  test_tunnel.py  test_user_token.py  test_worker.py  worker.js  wrangler.toml
crypto/: nestdb-ecdsa-intermediate.crt  nestdb-ecdsa-intermediate.csr  nestdb-ecdsa-intermediate.key  nestdb-ecdsa-intermediate.srl  nestdb-leaf.crt  nestdb-leaf.csr  nestdb-leaf.key  root.srl
demos/: README.md
deploy/: build.sh  deploy-prepare-clean.sh  deploy-remote-clean.sh  deploy.sh  increment-major.sh  increment-minor.sh  increment-patch.sh  version-helper.sh
docker/: DOCKER_STRATEGY.md  Dockerfile  Dockerfile.flask-prod  Dockerfile.nginx  README.md  build.sh  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  generate-certs.sh  init-db.sh  nginx.conf  postgresql.conf  run.sh  startup.sh  supervisord.conf
docs/: COMPLETE_TRANSFORMATION.md  FINAL_STATUS.md  IMPORT_FIX_COMPLETE.md  INSTALLATION_STRATEGY.md  PACKAGING_COMPLETE.md  RENOVATION_PROGRESS.md  SUMMARY.md  master_goal.md
network/: README.md  install-network-remote.sh  install-network.sh
patches/: RC8_RELEASE_NOTES.md  README.md  inventory-v1.4.3-bundle.README.md
pi-deployment/: README.md  config.py  deployment-info.txt  requirements.txt  test-startup.py
pi-image-builder/: README.md  build-with-pi-gen.sh
pi-setup/: DEPLOYMENT-FIXES.md  IMAGE-CREATION-GUIDE.md  NETWORK-TROUBLESHOOTING.md  README.md  ble-config.service  ble-dbus.conf  ble-install-guide.md  ble-option.md  ble_config_service.py  boot-diagnostic.sh  btwifiset-fixed.py  btwifiset.py  btwifiset.service  deploy-network-complete.sh  deploy-network-on-pi.sh  deploy-network-test.sh  deploy-network.sh  diagnose-btwifi-mode.sh  diagnose-network-failure.sh  first-boot-reset.sh  fix-network-order.sh  fix-network-stability.sh  install.sh  (+11 more)
(+149 files in other folders)
